// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client tests live query one 1`] = `
Object {
  "viewer": Object {
    "model2s": Object {
      "edges": Array [],
    },
  },
}
`;

exports[`Client tests live query one 2`] = `
Object {
  "viewer": Object {
    "model2s": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "TW9kZWwyOjEuMQ==",
            "name": "name2Test",
          },
        },
      ],
    },
  },
}
`;

exports[`Client tests live query one 3`] = `
Object {
  "viewer": Object {
    "model2s": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "TW9kZWwyOjEuMQ==",
            "name": "newName",
          },
        },
      ],
    },
  },
}
`;
